--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
 	"files.associations": {
 		"push_swap.h": "c",
-		"stdlib.h": "c"
+		"stdlib.h": "c",
+		"types.h": "c",
+		"stat.h": "c"
 	}
 }
